Scene 2: Trapezoid pool now starts half full
Scene 1: Translated the pool to the left
Scene 1: starts with a half full water basin.
Switched to dynamic model for square pool
Fixed: Text fields don't always clamp to the min/max after user finishes editing
Pressure tab: Translated everything up by 10 pixels to make more room for the drains at the bottom
Added more inset space between the fluid density slider control and the bottom and right edges of the screen
Change to metric for the default in Tab 1, and move metric to 1st radio button
Removed the plant image
Flow tab: Added ruler icon in the control panel
# 0.00.54 (63404) Apr 13, 2012
Added messages for hose angle and hose y-offset
Added message for water tower door
Added messages for faucet radio buttons and tank fill button
Added messages for the flux meter
Added messages for handles
Fixed crash under 1.5 related to BoxLayout, see #3301
Removed @Override for interfaces
Added message for grid button pressed
Added messages for velocity sensors
Added messages for dragging masses
Improved sim sharing component chaining
Added message for text fields
Added sim event messages
# 0.00.53 (63300) Apr 11, 2012
Switched from Pascals to kiloPascals
Move masses to front when dragging
Improved images for masses
# 0.00.52 (63247) Apr 10, 2012
Added images for masses
Added some sim sharing messages
Improved i18n
Removed minus signs from grid readouts
# 0.00.51 (63237) Apr 10, 2012
Pressure tab: Scene 3: Removed "masses" label
Pressure tab: Scenes 2-3: Added a label for the bottom grid line
# 0.00.50 (63218) Apr 9, 2012
Fluid Flow tab: Fixed: Reset all causes exceptions
Pressure tab: Switch back to scene 1 on "reset all"
Pressure tab: Trapezoid scene: Moved the drain down to center the slider in the space at the bottom
Pressure tab: Fixed: Align the "Grid" and "Ruler" Check boxes/text.  the Grid one should be moved right.
# 0.00.49 (63149) Apr 6, 2012